# the_squaring_game

./: Cargo.toml  README.md  license.md
src/: check_guess.rs  gen_number.rs  main.rs  print_results.rs  read_input.rs  separator_output.rs  setting_rules.rs
