[package]
name = "the_squaring_game"
version = "1.0.0"
edition = "2021"
authors = ["nikallow"]
license = "MIT"
repository = "https://github.com/nikallow/the_squaring_game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"